Get rid of extra escapes in LaTeX generation from man pages.
git-svn-id: https://svn.r-project.org/R/trunk@51846 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -186,6 +186,8 @@ BUG FIXES
 
     o	Rhttpd no longer crashes due to SIGPIPE when the client closes
 	the connection prematurely.  (PR#14266)
+	
+    o	Rd2latex() incorrectly escaped special characters in \usage sections.
 
 
 
