Port r51846 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51847 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -36,6 +36,8 @@ BUG FIXES
     o	format.POSIXlt() could cause a stack overflow and crash when used on
     	very long vectors.  (PR#14267)
 
+    o	Rd2latex() incorrectly escaped special characters in \usage sections.
+
 
 
 		CHANGES IN R VERSION 2.11.0
