port r51852 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51853 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -38,6 +38,10 @@ BUG FIXES
 
     o	Rd2latex() incorrectly escaped special characters in \usage sections.
 
+    o	mcnemar.test() could alter the levels (including dropping unused
+	levels) if passed 'x' and 'y' as factors (reported by Greg
+	Snow).
+
 
 
 		CHANGES IN R VERSION 2.11.0
