add extra pdflatex pass to Rd2pdf
git-svn-id: https://svn.r-project.org/R/trunk@51855 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -189,9 +189,11 @@ BUG FIXES
 	
     o	Rd2latex() incorrectly escaped special characters in \usage sections.
 
-    o	mcnemar.test() could alter the levels (including dropping unused
-	levels) if passed 'x' and 'y' as factors (reported by Greg
-	Snow).
+    o	mcnemar.test() could alter the levels (dropping unused levels)
+	if passed 'x' and 'y' as factors (reported by Greg Snow).
+
+    o	Rd2pdf sometimes needed a further pdflatex pass to get
+	hyperlinked pages correct.
 
 
 
