port updates from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51857 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -2449,6 +2449,9 @@ file by
 SystemRequirements: GNU make
 @end example
 
+Since the only viable make for Windows is GNU make, it is permissible to
+use GNU extensions in files @file{Makevars.win} or @file{Makefile.win}.
+
 @item
 Make use of the abilities of your compilers to check the
 standards-conformance of your code.  For example, @command{gcc} can be used
@@ -2472,10 +2475,16 @@ on most @R{} platforms (including those mostly used by the
 platforms.  It is rather unlikely that the use of @code{long} in C code
 has been thought through: if you need a longer type than @code{int} you
 should use a configure test for a C99 type such as @code{int_fast64_t}
-(and failing that, @code{long long}, but not that @code{long long} is
-not a standard C++ type, and C++ compilers set up for strict checking
-will reject it) and typedef your own type to be @code{long} or
+(and failing that, @code{long long} @footnote{but note that @code{long
+long} is not a standard C++ type, and C++ compilers set up for strict
+checking will reject it}) and typedef your own type to be @code{long} or
 @code{long long}, or use another suitable type (such as @code{size_t}).
+
+It is not safe to assume that @code{long} and pointer types are the same
+size, and they are not on 64-bit Windows.  If you need to convert
+pointers to and from integers use the C99 integer types @code{intptr_t}
+and @code{uintptr_t}.
+
 Note that @code{integer} in @acronym{FORTRAN} corresponds to @code{int}
 in C on all @R{} platforms.
 
@@ -9025,6 +9034,7 @@ The most useful function for printing from a C routine compiled into
 @code{printf}, but is guaranteed to write to @R{}'s output (which might
 be a @acronym{GUI} console rather than a file).  It is wise to write
 complete lines (including the @code{"\n"}) before returning to @R{}.
+It is defined in @file{R_ext/Print.h}.
 
 The function @code{REprintf} is similar but writes on the error stream
 (@code{stderr}) which may or may not be different from the standard
@@ -11014,7 +11024,7 @@ Both applications which embed @R{} and those which use a @code{system}
 call to invoke @R{} (as @command{Rscript.exe}, @command{Rterm.exe} or
 @command{R.exe}) need to be able to find the @R{} @file{bin} directory.
 The simplest way to do so is the ask the user to set an environment
-variable @env{R_HOME} and use that, but naive users may be fluxommed as
+variable @env{R_HOME} and use that, but naive users may be flummoxed as
 to how to do so or what value to use.
 
 The @R{} for Windows installers have for a long time allowed the value
